# tab-player

backend/: .gitignore  README.md  pyproject.toml
backend/src/: main.py  preprocess.py  schemas.py
backend/src/guitartabstomidi/: README.md  midi_generator.py  read_tabs.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.vue  main.ts
frontend/src/components/: InputComponent.vue
